@@ -2,14 +2,13 @@ package org.nstern.demos.app;
 
 import static org.nstern.demos.util.H.p;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ListContainsDemo {
 
     public static void main(String[] args) {
 
-        List<Integer> integerList = Arrays.asList(1, 2, 3, 5);
+        List<Integer> integerList = List.of(1, 2, 3, 5);
         if (integerList.contains(1)) {
             p("1 is in list : " + integerList);
         }
@@ -20,10 +19,21 @@ public class ListContainsDemo {
             p("4 is not in list : " + integerList);
         }
 
+        List<String> stringList = List.of("info.super", "info.top", "info.genial");
+
+        if (stringList.contains("info")) {
+            p("info is in list : " + stringList);
+        } else {
+            p("info is not in list : " + stringList);
+        }
+
+        if (stringList.contains("info.super")) {
+            p("info.super is in list : " + stringList);
+        } else {
+            p("info.super is not in list : " + stringList);
+        }
+
 
     }
 }
-
-
-
 
